[gd_scene load_steps=18 format=2]

[ext_resource path="res://frames.tres" type="SpriteFrames" id=1]
[ext_resource path="res://resources/old_man.png" type="Texture" id=8]
[ext_resource path="res://resources/full_heart.png" type="Texture" id=11]
[ext_resource path="res://resources/tiles.tres" type="TileSet" id=12]
[ext_resource path="res://resources/Ayush.gd" type="Script" id=13]
[ext_resource path="res://.import/new_theme.tres" type="Theme" id=14]
[ext_resource path="res://resources/Suit.gd" type="Script" id=15]
[ext_resource path="res://resources/TeleportOut.gd" type="Script" id=16]
[ext_resource path="res://resources/Cave2.gd" type="Script" id=17]
[ext_resource path="res://resources/player shoot sound-[AudioTrimmer.com].wav" type="AudioStream" id=19]

[sub_resource type="CapsuleShape2D" id=1]
radius = 40.0
height = 48.0

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=4]
resource_name = "type"
length = 3.0
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3 )
}

[sub_resource type="CircleShape2D" id=5]
radius = 53.0377

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("../Man:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("../Man:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("../Man:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("../Man:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=7]
resource_name = "mandestroy"
tracks/0/type = "bezier"
tracks/0/path = NodePath("../Man:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("../Man:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("../Man:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("../Man:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 81, 37.5 )

[node name="SuitCave" type="Node2D"]
script = ExtResource( 17 )

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 5, 5 )
tile_set = ExtResource( 12 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 3, 0, 1, 3, 0, 2, 3, 0, 3, 3, 0, 4, 3, 0, 5, 3, 0, 6, 3, 0, 7, 3, 0, 8, 3, 0, 9, 3, 0, 10, 3, 0, 11, 3, 0, 12, 3, 0, 13, 3, 0, 65536, 3, 0, 65549, 3, 0, 131072, 3, 0, 131085, 3, 0, 196608, 3, 0, 196621, 3, 0, 262144, 3, 0, 262157, 3, 0, 327680, 3, 0, 327693, 3, 0, 393216, 3, 0, 393229, 3, 0, 458752, 3, 0, 458765, 3, 0, 524288, 3, 0, 524301, 3, 0, 589824, 3, 0, 589837, 3, 0, 655360, 3, 0, 655373, 3, 0, 720896, 3, 0, 720897, 3, 0, 720898, 3, 0, 720899, 3, 0, 720900, 3, 0, 720901, 3, 0, 720904, 3, 0, 720905, 3, 0, 720906, 3, 0, 720907, 3, 0, 720908, 3, 0, 720909, 3, 0 )

[node name="Ayush" type="KinematicBody2D" parent="."]
position = Vector2( 555, 787 )
script = ExtResource( 13 )

[node name="massive hitbox" type="CollisionShape2D" parent="Ayush"]
shape = SubResource( 1 )

[node name="Rotate" type="Node2D" parent="Ayush"]

[node name="Chungus" type="AnimatedSprite" parent="Ayush/Rotate"]
scale = Vector2( 0.5, 0.5 )
frames = ExtResource( 1 )
animation = "default_back"

[node name="Shoot" type="AudioStreamPlayer" parent="Ayush"]
stream = ExtResource( 19 )

[node name="Man" type="Sprite" parent="."]
position = Vector2( 562, 289 )
scale = Vector2( 5, 5 )
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="."]
margin_left = 92.0
margin_top = 115.0
margin_right = 1032.0
margin_bottom = 135.0
theme = ExtResource( 14 )
text = "It's dangerous to go on without this equipment!"
percent_visible = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Label"]
pause_mode = 2
autoplay = "type"
anims/RESET = SubResource( 3 )
anims/type = SubResource( 4 )

[node name="Suit" type="Area2D" parent="."]
position = Vector2( 559, 508 )
script = ExtResource( 15 )

[node name="Sprite" type="Sprite" parent="Suit"]
scale = Vector2( 5, 5 )
texture = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Suit"]
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Suit"]
anims/RESET = SubResource( 6 )
anims/mandestroy = SubResource( 7 )

[node name="TeleportOut" type="Area2D" parent="."]
position = Vector2( 557, 918 )
script = ExtResource( 16 )

[node name="Polygon2D" type="Polygon2D" parent="TeleportOut"]
polygon = PoolVector2Array( -81, -39, 83, -39, 84, 40, -83, 40 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TeleportOut"]
position = Vector2( 2, 1.5 )
shape = SubResource( 8 )

[connection signal="body_entered" from="Suit" to="Suit" method="_on_Suit_body_entered"]
[connection signal="get_buff" from="Suit" to="Ayush" method="_on_Suit_get_buff"]
[connection signal="animation_finished" from="Suit/AnimationPlayer" to="Suit" method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="TeleportOut" to="TeleportOut" method="_on_TeleportOut_body_entered"]
